downgrading for old upstart

--- a/etc/init/rush.conf
+++ b/etc/init/rush.conf
@@ -1,11 +1,8 @@
 description "rush"
 
-setuid spinnaker
-setgid spinnaker
-
 expect fork
 
 stop on stopping spinnaker
 
 env HOME=/home/spinnaker
-exec /opt/rush/bin/rush 2>&1 > /var/log/spinnaker/rush/rush.log &
+exec sudo -u spinnaker -g spinnaker /opt/rush/bin/rush 2>&1 > /var/log/spinnaker/rush/rush.log &
